[package]
name = "escpos-md"
description = "Markdown for ESC/POS"
repository = "https://github.com/jpopesculian/escpos-md"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
codepage-437 = "0.1.0"
image = "0.23.14"
pulldown-cmark = "0.8.0"
thiserror = "1.0.29"
uuid = { version = "0.8.2", features = ["v4"] }
