[package]
name = "escpos-md"
description = "Markdown for ESC/POS"
repository = "https://github.com/jpopesculian/escpos-md"
version = "0.1.1"
edition = "2021"
license = "MIT"

[dependencies]
codepage-437 = "0.1.0"
image = "0.23.14"
lazy_static = "1.4.0"
pulldown-cmark = "0.8.0"
serde = { version = "1.0.130", features = ["derive"] }
thiserror = "1.0.29"
